update READMEand add Edit method to controllers and corresponding views

--- a/HairSalon/Views/Home/Index.cshtml
+++ b/HairSalon/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 @{
     Layout = "_Layout";
 }
-
-<button class="btn btn-success">@Html.ActionLink("Looking For a Stylist?", "Index", "Stylists")</button>
-<button class="btn btn-success">@Html.ActionLink("See all Clients", "Index", "Clients")</button>
+<h1>Eau Claire's Salon</h1>
+<button class="btn btn-warning">@Html.ActionLink("Looking For a Stylist?", "Index", "Stylists")</button>
+<button class="btn btn-warning">@Html.ActionLink("See all Clients", "Index", "Clients")</button>
